<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/_16dp">

    <ImageView
        android:id="@+id/item_user_avatar"
        android:layout_width="@dimen/_70dp"
        android:layout_height="@dimen/_70dp"
        android:contentDescription="@string/avatar_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_broken_image_black_24dp" />

    <TextView
        android:id="@+id/item_username"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/_6dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@id/item_user_avatar"
        app:layout_constraintStart_toStartOf="@id/item_user_avatar"
        app:layout_constraintTop_toBottomOf="@id/item_user_avatar"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/item_repo_name"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_6dp"
        android:paddingTop="@dimen/_6dp"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/item_user_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/item_description"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_6dp"
        android:paddingTop="@dimen/_6dp"
        android:paddingBottom="@dimen/_6dp"
        app:layout_constraintEnd_toStartOf="@id/item_user_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_repo_name"
        tools:text="@tools:sample/lorem" />

    <com.api.github.presentation.component.TextViewVectorDrawable
        android:id="@+id/item_num_forks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/forks_description"
        android:drawablePadding="@dimen/_4dp"
        android:textColor="@color/colorAccent"
        app:drawableStartCompact="@drawable/ic_code_black_24dp"
        app:drawableStartTint="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_description"
        tools:text="@tools:sample/lorem" />

    <com.api.github.presentation.component.TextViewVectorDrawable
        android:id="@+id/item_num_starts"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6dp"
        android:layout_marginEnd="@dimen/_6dp"
        android:contentDescription="@string/stargazers_count_description"
        android:drawablePadding="@dimen/_4dp"
        android:textColor="@color/colorAccent"
        app:drawableStartCompact="@drawable/ic_star_black_24dp"
        app:drawableStartTint="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@id/item_username"
        app:layout_constraintStart_toEndOf="@id/item_num_forks"
        app:layout_constraintTop_toBottomOf="@id/item_description"
        tools:text="@tools:sample/lorem" />


</androidx.constraintlayout.widget.ConstraintLayout>